# SDMetrics

./: pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: minimum.yml
