[project]
name = 'sdmetrics'
description = 'Metrics for Synthetic Data Generation Projects'
version = '0.13.1.dev0'
authors = [{ name = "MIT Data To AI Lab", email = "dailabmit@gmail.com" }]
license = { text = 'MIT license' }
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
requires-python = "'>=3.8,<3.12"
keywords = ['sdmetrics', 'sdmetrics', 'SDMetrics']

[project.urls]
"Source Code" = "https://github.com/sdv-dev/SDMetrics"
"Issue Tracker" = "https://github.com/sdv-dev/SDMetrics/issues"
"Twitter" = "https://twitter.com/sdv_dev"
"Chat" = "https://bit.ly/sdv-slack-invite"

[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

# Development dependencies
[project.optional-dependencies]

test = [
    'pytest>=6.2.5,<7',
    'pytest-cov>=2.6.0,<3',
    'pytest-rerunfailures>=10',
    'jupyter>=1.0.0,<2',
    'rundoc>=0.4.3,<0.5',
    'invoke',
]
